[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/commenter/TextBox.gd" type="Script" id=1]
[ext_resource path="res://assets/img/commenter/textbox.png" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/smashcat.ttf"

[sub_resource type="DynamicFont" id=2]
size = 5
font_data = SubResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
text_speed = 0.08

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="TextBox2" type="MarginContainer" parent="."]
margin_right = 14.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="TextBox2"]
margin_right = 14.0
margin_bottom = 16.0
texture = ExtResource( 2 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextBox2"]
margin_right = 14.0
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="Label" type="Label" parent="TextBox2/MarginContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 11.0
margin_bottom = 13.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.917647, 0.882353, 0.941176, 1 )
text = "dwede"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
